google client edded

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -5,10 +5,10 @@
     </head>
     <body>
         <div class="container app">
-            <button class="ui center aligned google button ">
+            <a class="ui google button" href="https://accounts.google.com/o/oauth2/v2/auth?scope=https%3A//www.googleapis.com/auth/drive.metadata.readonly&include_granted_scopes=true&state=state_parameter_passthrough_value&redirect_uri=https://localhost:5001/api/GoogleAuth&response_type=token&client_id=537182152074-dlkehhik0b0pjlrnnajdnnh5tj9j9nu2.apps.googleusercontent.com">
                 <i class="google icon"></i>
                 Log in with google
-            </button>
+            </a>
             <form class="ui form">
                 <div class="field">
                     <label>First Name</label>
@@ -21,12 +21,6 @@
                 <button class="ui button" type="submit">Login</button>
             </form>
         </div>
-       
-
-
-        
-
-
         <script
         src="https://code.jquery.com/jquery-3.1.1.min.js"
         integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
